# BybitAPI

./: .env  main.py  oldest.py  pyproject.toml  test.ipynb
BinanceAPI/: get_data.py
BybitAPI/: get_data.py
services/: get_data.py
